[package]
name = "cloudflare-ddns"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Poisson"]

[dependencies]
dotenv = "0.15.0"
log = "0.4.20"
env_logger = "0.11.2"
anyhow = "1.0.80"
cloudflare = { version = "0.11.0" , features = ["rustls-tls", "blocking"], default-features=false }
reqwest = { version = "0.11.24", features = ["rustls-tls", "json", "blocking"], default-features=false }
rustls = "0.22.2"
rustls-pemfile = "2.1.0"
webpki-roots = "0.26.1"

[profile.release]
lto = true
codegen-units = 1