[package]
name = "cloudflare-ddns"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Poisson"]

[dependencies]
dotenv = "0.15.0"
log = "0.4.21"
env_logger = "0.11.3"
anyhow = "1.0.82"
cloudflare = { version = "0.11.0" , features = ["rustls-tls", "blocking"], default-features=false }
reqwest = { version = "0.12.4", features = ["rustls-tls", "json", "blocking"], default-features=false }
rustls = "0.23.5"
rustls-pemfile = "2.1.2"
webpki-roots = "0.26.1"

[profile.release]
lto = true
codegen-units = 1