[package]
name = "cloudflare-ddns"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Poisson"]

[dependencies]
dotenvy = "0.15.7"
log = "0.4.27"
env_logger = "0.11.8"
anyhow = "1.0.98"
cloudflare = { version = "0.14.0" , features = ["rustls-tls", "blocking"], default-features=false }
reqwest = { version = "0.12.15", features = ["rustls-tls", "json", "blocking"], default-features=false }
rustls = "0.23.27"
rustls-pemfile = "2.2.0"
webpki-roots = "1.0.0"

[profile.release]
lto = true
codegen-units = 1